[package]
name = "flowdot"
version = "0.1.0"
authors = ["Heiko, Riemer <heiko@eheiko.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.3", features = [ "derive" ] }
log = "0.4.14"
simplelog = "0.11.1"
lazy_static = "1.1.1"
regex = "1.5.4"
ipaddress = "0.1.2"
dns-lookup = "*"
# tabbycat = { version = "0.1.2", features = [ "attributes" ] }
dot-writer = "0.1.2"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
