[package]
name = "flowdot"
version = "0.1.0"
authors = ["Heiko, Riemer <heiko@eheiko.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = [ "derive" ] }
log = "0.4.17"
simplelog = "0.12.0"
lazy_static = "1.4.0"
regex = "1.5.5"
ipaddress = "0.1.2"
dns-lookup = "1.0.8"
# tabbycat = { version = "0.1.2", features = [ "attributes" ] }
dot-writer = "0.1.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
